nickel-lang-lib/tests/integration/fail/contracts/poly_record_contract_missing_field.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::BlameError'
let f | forall r. { x : Number, y : Number; r } -> { x : Number, y : Number; r} =
  fun r => r
in f { x = 1 }
